Fixed zoom button z-index issue

--- a/ZendApp/public/css/route/create.css
+++ b/ZendApp/public/css/route/create.css
@@ -220,3 +220,7 @@ textarea {
 .jconfirm-box .buttons .btn:first-child {
     color: #FFB347 !important;
 }
+
+.leaflet-top, .leaflet-bottom {
+    z-index: 5;
+}
